--- a/src/main/webapp/app/course/manage/course-management.component.html
+++ b/src/main/webapp/app/course/manage/course-management.component.html
@@ -1,7 +1,9 @@
 <div>
-    <div class="d-flex">
-        <h4 id="course-page-heading" jhiTranslate="artemisApp.course.home.title">Courses</h4>
-        <div class="ml-auto d-flex">
+    <div class="row">
+        <div class="col-12 col-sm">
+            <h4 id="course-page-heading" jhiTranslate="artemisApp.course.home.title">Courses</h4>
+        </div>
+        <div class="col-12 col-sm-auto d-flex">
             <label class="d-flex align-items-center mb-0 mr-2">
                 <input type="checkbox" [checked]="showOnlyActive" (change)="toggleShowOnlyActive()" />
                 <span class="ml-2" jhiTranslate="artemisApp.course.showActive">Show only active courses</span>
