--- a/src/main/webapp/app/course/course-scores/course-scores.component.html
+++ b/src/main/webapp/app/course/course-scores/course-scores.component.html
@@ -15,18 +15,27 @@
     <div class="table-responsive" *ngIf="exportReady">
         <table class="table table-striped">
             <thead>
-                <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="callback">
-                    <th jhiSortBy="user.naame"><span jhiTranslate="instructorDashboard.name">Name</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                    <th jhiSortBy="user.login"><span jhiTranslate="instructorDashboard.username">Username</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="sortRows.bind(this)">
+                    <th jhiSortBy="user.name">
+                        <span jhiTranslate="instructorDashboard.name">Name</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th jhiSortBy="user.login">
+                        <span jhiTranslate="instructorDashboard.username">Username</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
                     <th jhiSortBy="numberOfParticipatedExercises">
-                        <span jhiTranslate="instructorDashboard.participated">Participated in Exercises (%)</span> <fa-icon [icon]="'sort'"></fa-icon>
+                        <span jhiTranslate="instructorDashboard.participated">Participated in Exercises (%)</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th jhiSortBy="numberOfSuccessfulExercises">
-                        <span jhiTranslate="instructorDashboard.successful">Successful Exercises (%)</span> <fa-icon [icon]="'sort'"></fa-icon>
+                        <span jhiTranslate="instructorDashboard.successful">Successful Exercises (%)</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <ng-container *ngFor="let exerciseType of exerciseTypes">
-                        <th *ngIf="maxNumberOfPointsPerExerciseType.get(exerciseType)! > 0" jhiSortBy="pointsPerExerciseType.{{ exerciseType }}">
-                            <span jhiTranslate="instructorDashboard.{{ exerciseType }}Points"></span><fa-icon [icon]="'sort'"></fa-icon>
+                        <th *ngIf="maxNumberOfPointsPerExerciseType.get(exerciseType)! > 0" jhiSortBy="sumPointsPerExerciseType.{{ exerciseType }}">
+                            <span jhiTranslate="instructorDashboard.{{ exerciseType }}Points"></span>
+                            <fa-icon [icon]="'sort'"></fa-icon>
                         </th>
                     </ng-container>
                     <th jhiSortBy="overallPoints"><span jhiTranslate="instructorDashboard.overallScore">Overall Points (%)</span> <fa-icon [icon]="'sort'"></fa-icon></th>
@@ -57,7 +66,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let student of students | sortBy: predicate:reverse">
+                <tr *ngFor="let student of students">
                     <td>{{ student.user.name }}</td>
                     <td>{{ student.user.login }}</td>
                     <td>{{ student.numberOfParticipatedExercises }} ({{ toLocaleString((student.numberOfParticipatedExercises / exercises.length) * 100) }}%)</td>
