--- a/src/main/webapp/app/exam/manage/exam-management.component.html
+++ b/src/main/webapp/app/exam/manage/exam-management.component.html
@@ -16,35 +16,40 @@
     <div class="table-responsive" *ngIf="exams">
         <table class="table table-striped">
             <thead>
-                <tr>
+                <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" [callback]="sortRows.bind(this)">
                     <th class="d-none d-md-table-cell"></th>
-                    <th class="d-none d-md-table-cell" jhisortby="id">
+                    <th class="d-none d-md-table-cell" jhiSortBy="id">
                         <span>{{ 'global.field.id' | translate }}</span>
                         <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
-                    <th>
+                    <th jhiSortBy="title">
                         <span>{{ 'artemisApp.exam.title' | translate }}</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
-                    <th class="d-none d-md-table-cell">
+                    <th class="d-none d-md-table-cell" jhiSortBy="visibleDate">
                         <span>{{ 'artemisApp.exam.visible' | translate }}</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
-                    <th>
+                    <th jhiSortBy="startDate">
                         <span>{{ 'artemisApp.exam.startDate' | translate }}</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
-                    <th>
+                    <th jhiSortBy="endDate">
                         <span>{{ 'artemisApp.exam.endDate' | translate }}</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th>
                         <span>{{ 'artemisApp.exam.duration' | translate }}</span>
                     </th>
-                    <th>
+                    <th jhiSortBy="registeredUsers">
                         <span>{{ 'artemisApp.exam.nrOfStudents' | translate }}</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let exam of exams | sortBy: predicate:true; trackBy: trackId">
+                <tr *ngFor="let exam of exams; trackBy: trackId">
                     <td class="d-none d-md-table-cell">
                         <div [ngStyle]="{ backgroundColor: ARTEMIS_DEFAULT_COLOR, width: '15px', height: '20px' }">&nbsp;</div>
                     </td>
