Import with feedback

--- a/src/main/webapp/app/exam/manage/students/exam-students.component.html
+++ b/src/main/webapp/app/exam/manage/students/exam-students.component.html
@@ -14,6 +14,7 @@
                 [courseId]="courseId"
                 [exam]="exam"
                 [buttonSize]="ButtonSize.MEDIUM"
+                (finish)="reloadExamWithRegisterdUsers()"
             ></jhi-students-exam-import-button>
         </div>
     </div>
