Validation on csv

--- a/src/main/webapp/app/exam/manage/students/students-exam-import-dialog/students-exam-import-dialog.component.scss
+++ b/src/main/webapp/app/exam/manage/students/students-exam-import-dialog/students-exam-import-dialog.component.scss
@@ -90,6 +90,10 @@ $error-bg-color: #f8d7da;
         float: left;
     }
 
+    tr {
+        display: flex !important;
+    }
+
     td,
     th {
         white-space: nowrap;
