--- a/src/main/webapp/app/exam/manage/students/students-exam-import-dialog/students-exam-import-dialog.component.html
+++ b/src/main/webapp/app/exam/manage/students/students-exam-import-dialog/students-exam-import-dialog.component.html
@@ -26,6 +26,9 @@
             </div>
             <div class="mt-2">
                 <input type="file" accept=".csv" (change)="onCSVFileSelect($event)" />
+                <div *ngIf="validationError" class="my-2 text-danger font-weight-bold">
+                    {{ validationError }}
+                </div>
             </div>
         </div>
         <div *ngIf="studentsToImport?.length > 0" class="form-group mt-4">
