--- a/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
@@ -1,1 +1,99 @@
-TODO
+<div class="d-flex pb-3 border-bottom">
+    <div class="d-flex flex-column justify-content-center">
+        <h4 class="mb-0" jhiTranslate="artemisApp.studentExamDetail.studentExam" [translateValues]="{ courseTitle: course?.title }">Student exam ({{ course?.title }})</h4>
+    </div>
+    <div class="ml-auto d-flex">
+        <button class="btn btn-primary" style="height: 35px;" (click)="downloadPdf()" *ngIf="course?.isAtLeastInstructor">
+            <span jhiTranslate="artemisApp.studentExamDetail.downloadPDF">Download PDF</span>
+        </button>
+    </div>
+</div>
+<jhi-alert></jhi-alert>
+<br />
+<div>
+    <div class="mb-3">
+        <h3><span jhiTranslate="artemisApp.studentExamDetail.student">Student</span></h3>
+        <ol style="list-style-type: none;">
+            <li>
+                <span
+                    ><b><span jhiTranslate="artemisApp.studentExamDetail.name">Name: </span></b>{{ student.name }}</span
+                >
+            </li>
+            <li>
+                <span
+                    ><b><span jhiTranslate="artemisApp.studentExamDetail.login">Login: </span></b>{{ student.login }}</span
+                >
+            </li>
+            <li>
+                <span
+                    ><b><span jhiTranslate="artemisApp.studentExamDetail.email">Email: </span></b>{{ student.email }}</span
+                >
+            </li>
+            <li>
+                <span
+                    ><b><span jhiTranslate="artemisApp.studentExamDetail.matricleNumber">Matricle number: </span></b>{{ student.visibleRegistrationNumber }}</span
+                >
+            </li>
+        </ol>
+    </div>
+
+    <div class="mb-3">
+        <h3><span jhiTranslate="artemisApp.studentExamDetail.exercises">Exercises</span></h3>
+        <div *ngIf="studentExam.exercises">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th class="d-none d-md-table-cell">
+                            <span jhiTranslate="artemisApp.studentExamDetail.id">ID</span>
+                        </th>
+                        <th>
+                            <span jhiTranslate="artemisApp.studentExamDetail.type">Type</span>
+                        </th>
+                        <th>
+                            <span jhiTranslate="artemisApp.studentExamDetail.title">Title</span>
+                        </th>
+                        <th>
+                            <span jhiTranslate="artemisApp.studentExamDetail.result">Result</span>
+                        </th>
+                        <th>
+                            <span jhiTranslate="artemisApp.studentExamDetail.reviewer">Reviewer</span>
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let exercise of studentExam.exercises">
+                        <td class="align-middle">
+                            {{ exercise.id }}
+                        </td>
+                        <td class="align-middle" style="font-size: 1.35rem;">
+                            <fa-icon [icon]="exerciseIcon(exercise)"></fa-icon>
+                        </td>
+                        <td class="align-middle">
+                            {{ exercise.title }}
+                        </td>
+                        <td class="align-middle">
+                            <!-- TODO show result string -->
+                        </td>
+                        <td class="align-middle">
+                            <!-- TODO show assessor -->
+                        </td>
+                        <td class="d-flex justify-content-end">
+                            <div class="btn-group">
+                                <button>
+                                    <!-- TODO Open Submission -->
+                                </button>
+                                <button>
+                                    <!-- TODO Open Assessment -->
+                                </button>
+                                <button>
+                                    <!-- TODO Cancel Assessment -->
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
