--- a/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
@@ -31,7 +31,7 @@
             </li>
             <li>
                 <span
-                    ><b><span jhiTranslate="artemisApp.studentExamDetail.matricleNumber">Matricle number: </span></b>{{ student.visibleRegistrationNumber }}</span
+                    ><b><span jhiTranslate="artemisApp.studentExamDetail.matriculationNumber">Matriculation number: </span></b>{{ student.visibleRegistrationNumber }}</span
                 >
             </li>
         </ol>
