--- a/src/main/webapp/app/shared/resizeable-container/resizeable-container.component.scss
+++ b/src/main/webapp/app/shared/resizeable-container/resizeable-container.component.scss
@@ -105,7 +105,7 @@
     }
 
     .expanded {
-        width: 100%;
+        width: 100% !important;
 
         .draggable-left {
             display: none;
