--- a/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-update.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-update.component.html
@@ -64,7 +64,7 @@
                     </ng-container>
                 </div>
                 <jhi-programming-exercise-plans-and-repositories-preview [programmingExercise]="programmingExercise"> </jhi-programming-exercise-plans-and-repositories-preview>
-                <div class="form-group-narrow position-relative">
+                <div *ngIf="!isExamMode" class="form-group-narrow position-relative">
                     <div>
                         <label class="label-narrow" jhiTranslate="artemisApp.exercise.categories">Categories</label>
                         <jhi-help-icon placement="top" text="artemisApp.programmingExercise.categoriesTooltip"></jhi-help-icon>
@@ -249,7 +249,7 @@
                         </label>
                     </div>
                 </div>
-                <div class="form-group-narrow" *ngIf="programmingExercise.id && !isImport">
+                <div class="form-group-narrow" *ngIf="programmingExercise.id && !isImport && !isExamMode">
                     <label class="form-control-label" jhiTranslate="artemisApp.exercise.notificationText" for="field_notification_text">Notification Text</label>
                     <input minlength="3" type="text" class="form-control" name="notificationtText" id="field_notification_text" [(ngModel)]="notificationText" />
                 </div>
