--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -9,6 +9,17 @@
     </div>
 </div>
 
+<div class="quiz-waiting-for-start-overlay alert alert-info" *ngIf="waitingForExamStart">
+    <span jhiTranslate="artemisApp.examParticipation.waitForStart"></span>
+    <div *ngIf="exam.startDate">
+        <hr />
+        <span jhiTranslate="artemisApp.examParticipation.timeUntilPlannedStart"></span>
+        <span class="text-bold">{{ timeUntilStart }}</span>
+        <br />
+        <span>({{ exam.startDate }})</span>
+    </div>
+</div>
+
 <div *ngIf="disconnected" class="exam-footer disconnected">
     <div class="container">
         <div class="exam-footer-content">
