--- a/src/main/webapp/app/exercises/programming/manage/programming-exercise-detail.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/programming-exercise-detail.component.html
@@ -111,6 +111,10 @@
                 <dd>
                     <span>{{ programmingExercise.publishBuildPlanUrl }}</span>
                 </dd>
+                <dt><span jhiTranslate="artemisApp.programmingExercise.allowOfflineIde">Allow Offline IDE</span></dt>
+                <dd>
+                    <span>{{ programmingExercise.allowOfflineIde }}</span>
+                </dd>
                 <dt><span jhiTranslate="artemisApp.programmingExercise.allowOnlineEditor">Allow Online Editor</span></dt>
                 <dd>
                     <span>{{ programmingExercise.allowOnlineEditor }}</span>
