--- a/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-update.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-update.component.html
@@ -203,6 +203,21 @@
                 </div>
                 <div class="form-group-narrow">
                     <div class="form-check">
+                        <label class="form-check-label" for="field_allowOfflineIde">
+                            <input
+                                class="form-check-input"
+                                type="checkbox"
+                                name="allowOfflineIde"
+                                id="field_allowOfflineIde"
+                                [(ngModel)]="programmingExercise.allowOfflineIde"
+                                checked
+                            />
+                            <span jhiTranslate="artemisApp.programmingExercise.allowOfflineIde">Allow Offline IDE</span>
+                        </label>
+                    </div>
+                </div>
+                <div class="form-group-narrow">
+                    <div class="form-check">
                         <label class="form-check-label" for="field_allowOnlineEditor">
                             <input
                                 class="form-check-input"
