--- a/src/main/webapp/app/shared/resizeable-container/resizeable-container.component.scss
+++ b/src/main/webapp/app/shared/resizeable-container/resizeable-container.component.scss
@@ -59,6 +59,8 @@
 
             .card-title {
                 display: flex;
+                margin-top: 0;
+                margin-bottom: 0;
             }
         }
 
