fix position for assessment information of modeling exercises

--- a/src/main/webapp/app/exercises/modeling/participate/modeling-submission.component.html
+++ b/src/main/webapp/app/exercises/modeling/participate/modeling-submission.component.html
@@ -54,7 +54,7 @@
                         (selectionChanged)="onSelectionChanged($event)"
                     ></jhi-modeling-assessment>
                 </div>
-                <div class="col-3" *ngIf="submission?.submitted && (!isActive || result)">
+                <div class="col-3 pt-5" *ngIf="submission?.submitted && (!isActive || result)">
                     <h4 jhiTranslate="artemisApp.modelingSubmission.assessment.title">Assessment</h4>
                     <div class="alert alert-info" *ngIf="generalFeedbackText && generalFeedbackText.length >= 0">
                         <b><fa-icon [icon]="['far', 'comment-dots']"></fa-icon>&nbsp;<span jhiTranslate="artemisApp.assessment.generalFeedback">General Feedback</span>:</b>
